name:           cc-untyped
version:        0.1.0
description:    Please see the README on Github at <https://github.com/ccntrq/cc-untyped#readme>
homepage:       https://github.com/ccntrq/cc-untyped#readme
bug-reports:    https://github.com/ccntrq/cc-untyped/issues
author:         Alex Pankoff
maintainer:     ccntrq@screenri.de
copyright:      2018 Alex Pankoff
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/ccntrq/cc-untyped

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      parsec == 3.1.13.0
  exposed-modules:
      Parser,
      Term,
      Syntax,
      Core
  other-modules:
      Paths_cc_untyped
  default-language: Haskell2010

executable cc-untyped-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cc-untyped
  other-modules:
      Paths_cc_untyped
  default-language: Haskell2010

test-suite cc-untyped-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cc-untyped
  other-modules:
      Paths_cc_untyped
  default-language: Haskell2010
